2006-02-28  Paul J Stevens <paul@nfg.nl>

	* pool.c, serverchild.c:
	signal cleanup in progress
	* check_dbmail_imapd.c, misc.c:
	date_sql2imap fix in progress
	* config.c:
	make failure to read config-file fatal
	* imapd.c, server.c:
	perform clean restart in case of SIGHUP
	
2006-02-24  Aaron Stone  <aaron@serendipity.cx>

	* sortmodule.c, modules/sortnull.c, Makefile.am, modules/Makefile.am:
	Ok, let's do sortnull.c and drop the -DSHARED and -DSTATIC stuff. It
	now Works For Me (TM) in all combinations of shared, static, with
	sieve and without.

2006-02-24  Aaron Stone  <aaron@serendipity.cx>

	* sort.h, sortmodule.h, sortmodule.c, modules/sortsieve.c,
	timsieved.c, timsieve.c:
	Added a proper listextensions function and the existing
	CAPABILITY command of managesieve now uses it.
	* db.c:
	Moved two calls to db_free_result to the right places.
	* serverchild.c:
	Reports PID of process handling a new connection, for ease
	of attaching GDB.

2006-02-20  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4, configure.in:
	Made shared/static into an either-or dichotomy.
	* dbmail.conf:
	Moved auto_reply, auto_notification to DELIVERY section,
	and sendmail to the DBMAIL section.
	* dbmail.h:
	Moved a few definitions here.
	* lmtp.c, main.c:
	Slowly getting rid of headerfields list.
	* timsieve.c:
	Delete the temp script if it's got errors.
	* db.c:
	Added a few more db_free_result calls.
	* misc.h, misc.c:
	Moved discard_from_stream from pipe.c here.
	* pipe.h, pipe.c:
	Rewrite of send_reply, send_notification with send_mail as the core.
	Added send_vacation as another simple wrapper/consumer of send_mail.
	* sortmodule.h, modules/sortsieve.c, sort.c:
	Vacation works. Reject works.

2006-02-20  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4:
	Trying to get smarter about shared, static.
	* check_dbmail_deliver.c:
	Zapped the returnpath argument to insert_messages.
	* db.h, db.c:
	Added db_check_sievescript_active, escaped script in
	db_add_sievescript.